--- a/src/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/AppBundle/Resources/views/Default/admin.html.twig
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Панель адмиинистратора ITSupport</a>
+            <a class="navbar-brand" href="{{ path('admin_page', { 'value': 'main' }) }}">Панель адмиинистратора ITSupport</a>
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
@@ -71,7 +71,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav side-nav">
                 <li>
-                    <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Администрирование</a>
+                    <a href="{{ path('admin_page', { 'value': 'main' }) }}"><i class="fa fa-fw fa-dashboard"></i> Администрирование</a>
                 </li>
                 <li>
                     <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Справочник <i class="fa fa-fw fa-caret-down"></i></a>
@@ -80,7 +80,7 @@
                             <a href="#">Пользователи</a>
                         </li>
                         <li>
-                            <a href="#">Категории вопросов</a>
+                            <a href="{{ path('admin_page', { 'value': 'requestCategory' }) }}">Категории вопросов</a>
                         </li>
                     </ul>
                 </li>
@@ -92,21 +92,7 @@
     <div id="page-wrapper">
 
         <div class="container-fluid">
-            <h2>Заявки пользователей</h2>
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                <th>Ид</th>
-                <th>Текст</th>
-                </thead>
-                <tbody>
-            {% for RequestPeople in RequestPeople %}
-                <tr>
-                    <td>{{ RequestPeople.id }}</td>
-                    <td>{{ RequestPeople.text }}</td>
-                </tr>
-            {% endfor %}
-                </tbody>
-            </table>
+            {% block content %}{% endblock %}
         </div>
         <!-- /.container-fluid -->
 
