--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-
+<div id="scroll" onclick="$.scrollify('move','#main');"></div>
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog">
         {{ render(controller('FOSUserBundle:Security:login')) }}
@@ -53,7 +53,7 @@
     </div>
 </div>
 <!-- Large modal -->
-<section style = "height: 100vh;">
+<section style = "height: 100vh;" data-section-name="main">
     <div class="navbar navbar-default navbar-static-top" role="navigation" >
         <div class="container-fluid">
             <div class="navbar-header">
@@ -69,9 +69,9 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Главная</a></li>
-                    <li><a href="#about">О сервисе</a></li>
-                    <li><a href="#contact">Контакты</a></li>
+                    <li><a onclick="$.scrollify('move','#main');">Главная</a></li>
+                    <li><a onclick="$.scrollify('move','#about');">О сервисе</a></li>
+                    <li><a onclick="$.scrollify('move','#contact');">Контакты</a></li>
                     {% if app.user %}
                         <li><a href="{{ path('admin_page') }}">Администрирование</a></li>
                         <li><a>{{ app.security.getToken().getUser().getUsername() }}</a></li>
@@ -121,7 +121,7 @@
         </a>
     </div>
 </section>
-<section >
+<section data-section-name="about">
     <div style = "height: 100vh;">
         <div class="col-md-12">
             <div class="page-header">
@@ -149,7 +149,7 @@
 
     </div>
 </section>
-<section>
+<section data-section-name="contact">
     <div style = "height: 100vh;">
         <div class="col-md-12">
             <div class="page-header">
@@ -167,3 +167,14 @@
 
 </body>
 </html>
+
+<script>
+    window.onscroll = function() {
+        if ($(window).scrollTop() > 500) {
+            $('#scroll').addClass("visScroll");
+        }
+        if ($(window).scrollTop() < 500) {
+            $('#scroll').removeClass("visScroll");
+        }
+    }
+</script>
