aliluaya add UserBundle new

--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -1,20 +1,24 @@
-<div class="loginmodal-container">
-    <h1>Войти в свой аккаунт</h1><br>
-    <form action="{{ path('fos_user_security_check') }}" method="POST" class="fos_user_login">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-        {#<input type="text" name="user" >#}
-        <input type="text" id="inputUsernameEmail" name="_username" required="required" placeholder="Имя пользователя" />
-        {#<input type="password" name="pass" placeholder="Password">#}
-        <input type="password" class="form-control" id="inputPassword" name="_password" required="required" placeholder="Пароль" />
-        {#<input type="submit" name="login" class="login loginmodal-submit" value="Login">#}
-        <input type="submit" name="login" class="login loginmodal-submit" value="Войти">
-        {% if error %}
-            {#<div style="color:red">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-            <div style="color:red">Вам не удалось авторизоваться в системе</div>
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+    {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+    <a href="{{ path('fos_user_security_logout') }}">
+        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+    </a>
+{% else %}
+    <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+{% endif %}
+</div>
 
-        {% endif %}
-    </form>
-    <div class="login-help">
-        <a href="#">Регистация</a> - <a href="#">Восстановить пароль</a>
-    </div>
+{% if app.request.hasPreviousSession %}
+    {% for type, messages in app.session.flashbag.all() %}
+        {% for message in messages %}
+            <div class="flash-{{ type }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+{% endif %}
+
+<div>
+    {% block fos_user_content %}
+    {% endblock fos_user_content %}
 </div>
