--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -27,6 +27,7 @@
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog">
         {{ render(controller('FOSUserBundle:Security:login')) }}
+        {#{% block login_form %} {% endblock %}#}
     </div>
 </div>
 <!-- Modal -->
