add link registration

--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -14,6 +14,6 @@
         {% endif %}
     </form>
     <div class="login-help">
-        <a href="#">Регистация</a> - <a href="#">Восстановить пароль</a>
+        <a href="{{ path('fos_user_registration_register') }}">Регистация</a> - <a href="#">Восстановить пароль</a>
     </div>
 </div>
