--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -73,14 +73,26 @@
                     <li><a onclick="$.scrollify('move','#main');">Главная</a></li>
                     <li><a onclick="$.scrollify('move','#about');">О сервисе</a></li>
                     <li><a onclick="$.scrollify('move','#contact');">Контакты</a></li>
-                    {#{% if app.user %}#}
+
                     {% if is_granted('ROLE_ADMIN') %}
                         <li><a href="{{ path('admin_page') }}">Администрирование</a></li>
                     {% endif %}
+                        {#<li><a>{{ app.getUser().getUsername() }}</a></li>#}
+                    {#{{ app.user.username|default('Гость') }}#}
                     {% if app.user %}
-                        {#...#}
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>{{ app.user.username }}<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="{{ path('fos_user_security_logout') }}"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                                </li>
+                            </ul>
+                        </li>
                     {% else %}
-                        <li><a>{{ app.security.getToken().getUser().getUsername() }}</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#login-modal">Войти</a></li>
                     {% endif %}
                 </ul>
