--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -18,8 +18,9 @@
             {#{{ form_row(form.submit, {'label':'Тип учетной записи', 'attr': {'class': 'form-control'}}) }}#}
             {{ form_rest(form) }}
             <div>
-                <button type="submit" class="btn btn-success"><i class="glyphicon glyphicon-ok"></i>  Регистрация</button>
-                <button type="submit" class="btn btn-danger"><i class="glyphicon glyphicon-remove"></i>  Отмена</button>
+                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-ok"></i>  Регистрация</button>
+                {#<button type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i>  Отмена</button>#}
+                <a href="{{ path('main_homepage') }}" class="btn btn-default"><i class="glyphicon glyphicon-remove"></i>Отмена</a>
             </div>
         </form>
     </div>
