--- a/src/AppBundle/Resources/views/adminMenu/RequestPeople.html.twig
+++ b/src/AppBundle/Resources/views/adminMenu/RequestPeople.html.twig
@@ -3,13 +3,13 @@
     <h2>Заявки пользователей</h2>
     <table class="table table-bordered table-hover table-striped">
         <thead>
-        <th>Ид</th>
+        <th>Категория</th>
         <th>Текст</th>
         </thead>
         <tbody>
         {% for RequestPeople in RequestPeople %}
             <tr>
-                <td>{{ RequestPeople.id }}</td>
+                <td>{{ RequestPeople.requestCategory.name }}</td>
                 <td>{{ RequestPeople.text }}</td>
             </tr>
         {% endfor %}
